--- a/ObligatoriskOpgave/app/src/main/AndroidManifest.xml
+++ b/ObligatoriskOpgave/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".SeeReservationsActivity" />
         <activity android:name=".AddReservationActivity" />
         <activity android:name=".RoomsInBuildingActivity" />
-        <activity android:name=".ReservationInRoomsActivity"></activity>
+        <activity android:name=".ReservationInRoomsActivity" />
+        <activity android:name=".ShowReservationActivity"></activity>
     </application>
 
 </manifest>
