Logout and fling
Nu kan man logge ud og bruge fling

--- a/ObligatoriskOpgave/app/src/main/AndroidManifest.xml
+++ b/ObligatoriskOpgave/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity android:name=".AvailableBuildings" />
         <activity android:name=".AvailableRooms" />
         <activity android:name=".SeeMyReservation" />
-        <activity android:name=".DeleteSpecificReservation"></activity>
+        <activity android:name=".DeleteSpecificReservation" />
+        <activity android:name=".LogoutActivity"></activity>
     </application>
 
 </manifest>
